@@ -26,6 +26,8 @@
 "UNHIDE","Unhide","Options panel menu item."
 "DELETE","Delete","Options panel menu item."
 "TREE_OPTIONS","Tree options","Options panel header."
+"RANDOM_ROTATION","Random tree rotation"
+"RANDOM_ROTATION_TIP","If this is enabled, each tree will be randomly rotated.","Checkbox tooltip in options panel."
 "SWAY_FACTOR","Tree movement limit","Options slider title."
 "STOP_DISTANT_SWAY","Stop distant trees from swaying","Checkbox in options panel."
 "STOP_DISTANT_SWAY_TIP","If this is enabled, trees in the FAR distance won't sway at all.","Checkbox tooltip in options panel."
